--- a/static/info.html
+++ b/static/info.html
@@ -55,8 +55,8 @@
     <h2>Link Deployment Info</h2>
     <p>Self Deployment (GitHub)</p>
   </div>
-  <a href="https://discord.gg/sWPHCdxCPU" target="new"><i class="bi bi-discord"></i></a>
-  <a href="https://github.com/dogenetwork/v4" target="new"><i class="bi bi-github"></i></a>
+  <a href="https://discord.gg/C5qJ6msavM" target="new"><i class="bi bi-discord"></i></a>
+  <a href="https://discord.gg/C5qJ6msavM" target="new"><i class="bi bi-github"></i></a>
 </div>
   <div class="footer themesExcluded" style="position:fixed;text-align:right;">
     <a href="/">Back</a>
