--- a/static/info.html
+++ b/static/info.html
@@ -36,7 +36,7 @@
   <h1 style="font-size:68px;">Information</h1>
   <div class="themesExcluded">
     <h2>Website</h2>
-    <p>Doge Unblocker</p>
+    <p>FireCone</p>
   </div>
   <div class="themesExcluded">
     <h2>Version</h2>
@@ -48,12 +48,12 @@
 </div>
   <div class="themesExcluded">
     <h2>Developers</h2>
-    <p>Derpman</p>
-    <p>Fowntain</p>
+    <p>Zenreck</p>
+    <p>Inputly</p>
   </div>
   <div class="themesExcluded">
-    <h2>Link Deployment Info</h2>
-    <p>Self Deployment (GitHub)</p>
+    <h2>FireEu</h2>
+    <p>Made for performance</p>
   </div>
   <a href="https://discord.gg/C5qJ6msavM" target="new"><i class="bi bi-discord"></i></a>
   <a href="https://discord.gg/C5qJ6msavM" target="new"><i class="bi bi-github"></i></a>
